tests/cases/negative/syntax/qualifiedSig.lam
-- you can't qualify a type signature
foo.bar : Level
